background color changed

--- a/templates/AlgoToCode.html
+++ b/templates/AlgoToCode.html
@@ -44,6 +44,9 @@
         },500);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         #sL img, #tL img, #fL img{
             opacity:0.5;
         }
