--- a/templates/anAlgorithm.html
+++ b/templates/anAlgorithm.html
@@ -29,6 +29,9 @@
         },500);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         .container {
             display: none;
         }
