--- a/templates/binarySearch.html
+++ b/templates/binarySearch.html
@@ -143,7 +143,9 @@
         to{width: 600px;}
 		
         }   
-		
+		body{
+           background-color: #e6e6e6;
+       }
 		
     </style>
     <title>Document</title>
