--- a/templates/primeri.html
+++ b/templates/primeri.html
@@ -55,6 +55,9 @@
         },1300);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         #pB {
             display:none;
         }
