--- a/templates/primeri2.html
+++ b/templates/primeri2.html
@@ -92,7 +92,9 @@
     opacity: 1;
     background: #ccccff;
 }
-
+body{
+           background-color: #e6e6e6;
+       }
     
     </style>
     <script>
