--- a/templates/primeri3.html
+++ b/templates/primeri3.html
@@ -100,6 +100,9 @@
         },1200);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         body {
             font-family: 'Maven Pro';
         }
