--- a/templates/proektna2.html
+++ b/templates/proektna2.html
@@ -69,6 +69,10 @@
    form {
           border: 3px solid #f1f1f1;
        }
+       body{
+           background-color: #e6e6e6;
+       }
+           
        </style>
     <script>
         var najaveni;
@@ -191,8 +195,8 @@
             padding-top:50px;
             min-height:180px;
             margin:auto;    
-            background: #cccccc;
-            border:4px #cccccc solid;
+            background: #bbbbbb;
+            border:4px #bbbbbb solid;
             margin-top: 20px;
             border-radius: 15px;
         }
@@ -208,7 +212,7 @@
     <nav class="container">
             <div class="row" style="margin:0px;">
 	
-                    <span style="color:white; font-size:20px;">s</span>
+                    <span style="color:#e6e6e6; font-size:20px;">p</span>
                     <h3 class="pull-right" style="margin-top:0px; margin-bottom:0px;" id="output" ></h3>
                     </div>
         <div class="row">
