--- a/templates/quizMenu.html
+++ b/templates/quizMenu.html
@@ -24,6 +24,9 @@
         .iconss {
             font-size:150px;
         }
+        body{
+           background-color: #e6e6e6;
+       }
         .imgdiv {
             width:286px;
         }
