--- a/templates/toCode2.html
+++ b/templates/toCode2.html
@@ -111,6 +111,9 @@
         },1500);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         h1 {
             font-family: 'Julius Sans One';
         }
