--- a/templates/toCode3.html
+++ b/templates/toCode3.html
@@ -164,6 +164,9 @@
         body {
             font-family: 'Maven Pro';
         }
+        body{
+           background-color: #e6e6e6;
+       }
         img {
             width:23%;
             height:23%;
