--- a/templates/fillIn.html
+++ b/templates/fillIn.html
@@ -77,6 +77,9 @@
         height:260px;
         display:block;
         }
+        body{
+           background-color: #e6e6e6;
+       }
     </style>
     <script>
         function fun() {
