--- a/templates/sort.html
+++ b/templates/sort.html
@@ -59,6 +59,9 @@
         height:260px;
         display:block;
         }
+        body{
+           background-color: #e6e6e6;
+       }
         li {
             font-size:20px;
         }
