--- a/templates/toCode.html
+++ b/templates/toCode.html
@@ -56,6 +56,9 @@
         },500);
     </script>
     <style>
+        body{
+           background-color: #e6e6e6;
+       }
         .container {
             display: none;
         }
