first slide wasnt working checking now

--- a/templates/binarySearch.html
+++ b/templates/binarySearch.html
@@ -11,7 +11,7 @@
     <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
     <script>
 		function fun() {
-            window.location.href="{{ url_for('index') }}";
+            window.location.href="{{ url_for('algoBase3') }}";
         }
 		$(document).ready(function(){
             $(".container").css("margin-top",$(document).height()/10+"px");
