--- a/templates/proektna2.html
+++ b/templates/proektna2.html
@@ -69,9 +69,7 @@
    form {
           border: 3px solid #f1f1f1;
        }
-       body{
-           background-color: #e6e6e6;
-       }
+
            
        </style>
     <script>
@@ -212,7 +210,7 @@
     <nav class="container">
             <div class="row" style="margin:0px;">
 	
-                    <span style="color:#e6e6e6; font-size:20px;">p</span>
+                    <span style="color:white; font-size:20px;">p</span>
                     <h3 class="pull-right" style="margin-top:0px; margin-bottom:0px;" id="output" ></h3>
                     </div>
         <div class="row">
